[package]
name = "gnome-dbus-api"
version = "0.1.0"
authors = ["Julian Kominovic"]
license = "MIT"
description = "A simple API to interact with GNOME DBus and Gsettings"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
gdk = "0.18.0"
gio = "0.18.2"
gtk = "0.18.1"
image = "0.24.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zbus = "3.14.1"
zvariant = "3.15.0"
